--- a/src/full.liquid
+++ b/src/full.liquid
@@ -1,3 +1,5 @@
+{% assign latest = messages | first %}
+{% assign rest = messages | slice: 1, 4 %}
 
 <div class="layout layout--col">
     {% if latest %}
@@ -15,12 +17,8 @@
             {% endunless %}
         {% endfor %}
     {% else %}
-        Nothing yet
+        <span class="label">No messages received yet</span>
     {% endif %}
 </div>
 
-<div class="title_bar">
-  <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#000000" viewBox="0 0 256 256"><path d="M224,48H32a8,8,0,0,0-8,8V192a16,16,0,0,0,16,16H216a16,16,0,0,0,16-16V56A8,8,0,0,0,224,48Zm-96,85.15L52.57,64H203.43ZM98.71,128,40,181.81V74.19Zm11.84,10.85,12,11.05a8,8,0,0,0,10.82,0l12-11.05,58,53.15H52.57ZM157.29,128,216,74.18V181.82Z"></path></svg>
-  <span class="title">Postmark Incoming Feed</span>
-  <span class="instance">{{ trmnl.plugin_settings.instance_name }}</span>
-</div>
+{% render "title_bar" %}
