--- a/src/quadrant.liquid
+++ b/src/quadrant.liquid
@@ -1,1 +1,5 @@
-quadrant!
+<div class="layout">
+    {% render "message", message: messages.first, hide_sender: true %}
+</div>
+
+{% render "title_bar" %}
