--- a/src/shared.liquid
+++ b/src/shared.liquid
@@ -1,6 +1,3 @@
-{% assign latest = messages | first %}
-{% assign rest = messages | slice: 1, 4 %}
-
 {% template message %}
 {% if size == 'small' %}
     {% assign label_size = 'label--small' %}
@@ -10,18 +7,28 @@
     {% assign content_size = 'content--large' %}
 {% endif %}
 
-<div class="item flex flex--row w--full pb--1">
-    <div class="stretch ">
-        <div class="flex flex--col flex--left gap--xsmall">
+<div class="item pb--1">
+    <div class="content gap--xsmall">
+        <div class="flex gap--space-between w--full">
             <div class="label {{ label_size }} label--inverted">{{ message.subject }}</div>
-            <div class="richtext">
-                <div class="content {{ content_size }} clamp--3">{{ message.message }}</div>
+            <div class="label {{ label_size }}">
+                {% unless hide_sender %}
+                    {{ message.sender_name }} :: 
+                {% endunless %}
+                {{ message.time | date: "%b %d" }}
             </div>
         </div>
+        <div class="richtext">
+            <div class="content {{ content_size }}">{{ message.message }}</div>
+        </div>
     </div>
-    <div class="flex flex--col flex--right gap--xsmall flex--center-y">
-        <div class="label {{ label_size }}">{{ message.sender_name }}</div>
-        <div class="label {{ label_size }}">{{ message.time | date: "%b %d" }}</div>
-    </div>
+</div>
+{% endtemplate %}
+
+{% template title_bar %}
+<div class="title_bar">
+  <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#000000" viewBox="0 0 256 256"><path d="M224,48H32a8,8,0,0,0-8,8V192a16,16,0,0,0,16,16H216a16,16,0,0,0,16-16V56A8,8,0,0,0,224,48Zm-96,85.15L52.57,64H203.43ZM98.71,128,40,181.81V74.19Zm11.84,10.85,12,11.05a8,8,0,0,0,10.82,0l12-11.05,58,53.15H52.57ZM157.29,128,216,74.18V181.82Z"></path></svg>
+  <span class="title">Postmark Incoming Feed</span>
+  <span class="instance">{{ trmnl.plugin_settings.instance_name }}</span>
 </div>
 {% endtemplate %}
